토요일 수정

--- a/WebContent/admin/customerService/notice/edit.html
+++ b/WebContent/admin/customerService/notice/edit.html
@@ -3,36 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../../css/reset.css" type="text/css">
-    <link rel="stylesheet" href="../../../css/admin/layout.css">
-    <link rel="stylesheet" href="../../../css/admin/notice/edit.css">
+     <link rel="stylesheet" href="/css/reset.css" type="text/css">
+    <link rel="stylesheet" href="/css/layout.css">
+    <link rel="stylesheet" href="/css/admin/layout.css">
+    <link rel="stylesheet" href="/css/admin/notice/edit.css">
+     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
     <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
     <title>noticeCreate</title>
 </head>
 <body>
-    <header class="sec_header">
-        <div class="header pcHeader">
-            <div class="header_h1">
-                <h1><a class="teum_logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
+   <header class="sec-header-page">
+        <section class="header-sec pcHeader">
+            <div class="header-logo">
+                <h1><a class="teum-logo" href="http://127.0.0.1:5500/main.html">틈</a></h1>
             </div>
             <div>
-                <ul class="main_menu">
+                <ul class="main-menu">
                     <li class="header_search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
-                    <li><a href="">공지사항</a></li>
-                    <li><a href="">이벤트</a></li>
+                    <li><a href="">제안하기</a></li>
+                    <li><a href="">예약내역</a></li>
                     <li><a href="">더보기</a></li>
                     <li class="mypage"><a href="">로그인</a>
-                        <div class="mega_menu">
+                        <div class="mega-menu">
                             <ul>
-                                <li><a href="">submenu</a></li>
-                                <li><a href="">submenu</a></li>
-                                <li><a href="">submenu</a></li>
+                                <li><a href="">내정보</a></li>
+                                <li><a href="">제안내역</a></li>
+                                <li><a href="">찜한 숙소</a></li>
+                                <li><a href="">로그아웃</a></li>
                             </ul>
                         </div>
                     </li>
                 </ul>
             </div>
-        </div>
+        </section>
     </header>
     <main>
 	    <section class="body">
@@ -46,10 +50,10 @@
 	        <div class="container">
 	            <nav id="nav" class="nav">
 	                <ul>
-	                    <li><a href=""><i class="fas fa-hotel"></i><span>업체관리</span></a></li>
-	                    <li><a href=""><i class="fas fa-user-circle"></i><span>회원관리</span></a></li>
-	                    <li><a href=""><i class="far fa-calendar-alt"></i><span>프로모션관리</span></a></li>
-	                    <li class="current-tab"><a href=""><i class="fas fa-headphones"></i><span>고객센터</span></a></li>
+	                     <li><a href="/admin/accommodations/list"><i class="fas fa-hotel"></i><span>업체관리</span></a></li>
+	                    <li><a href="/admin/userInfo/list"><i class="fas fa-user-circle"></i><span>회원관리</span></a></li>
+	                    <li><a href="/admin/promotion/goldenTime/list"><i class="far fa-calendar-alt"></i><span>프로모션관리</span></a></li>
+	                    <li class="current-tab"><a href="list"><i class="fas fa-headphones"></i><span>고객센터</span></a></li>
 	                </ul>
 	            </nav>
 	            <main id="main" class="main">
@@ -66,31 +70,29 @@
 	                    </div>
 	                    <section class="form-sec">
 	                        <h1>공지사항 수정</h1>
-	                        <form action="" class="reg-form">
+	                        <form action="edit" method="post" class="reg-form">
 	                            <table class="table">
 	                                <tr>
 	                                    <th class="col-m">제목</th>
 	                                    <td class="col-l text-left">
-	                                        <input type="text" class="input-title" autofocus required>
-	                                      
+	                                    	<input type="text" name="title" value="${n.title}" >
 	                                    </td>
-	                                </tr>
-	                                <tr>
-	                                    <th>첨부파일</th>
-	                                    <td class="text-left">
-	                                        <input type="file">
+	                                    <th class="col-m">상태</th>
+	                                    <td class="col-l text-left">
+	                                      <input type="checkbox" class="checkbox-open"  name="pub"  ${n.pub}><span>즉시 공개</span>
 	                                    </td>
 	                                </tr>
 	                                <tr>
 	                                    <th>내용</th>
-	                                    <td class="text-left">
-	                                        <textarea class="textarea" cols="75" rows="25"></textarea>
+	                                    <td class="text-left" colspan="3">
+	                                       <textarea rows="25" cols="75" name="content">${n.content}</textarea>
 	                                    </td>
 	                                </tr>
 	                            </table>
 	                            <div>
-	                                <input class="btn-submit" type="submit" value="수정" />
-	                                <button class="btn-cancel" href="">취소</button>
+	                            	<input type="hidden" name="id" value="${n.id}">
+	                                <a class="btn-cancel"  href="detail?id=${n.id}"><span>취소<span></a>
+	                                <input type="submit"  class="btn-submit"  value="저장">
 	                            </div>
 	                        </form>
 	                    </section>
@@ -98,6 +100,6 @@
 	            </main>
 	        </div>
 	    </section>
-   </main>
+    </main>
 </body>
 </html>
