--- a/WebContent/company/reverseOffer/detail.html
+++ b/WebContent/company/reverseOffer/detail.html
@@ -71,7 +71,7 @@
                             <ul>
                                 <li>
                                     <div>날짜</div>
-                                    <div>2020.12.12 ~ 2020.12.15</div>
+                                    <div>2020-12-12 ~ 2020-12-15</div>
                                 </li>
                                 <li>
                                     <div>위치</div>
@@ -92,7 +92,7 @@
                             <ul>
                                 <li>
                                     <div>날짜</div>
-                                    <div>2020.12.07 ~ 2020.12.08</div>
+                                    <div>2020-12-07 ~ 2020-12-08</div>
                                 </li>
                                 <li>
                                     <div>위치</div>
