--- a/WebContent/user/QnA.html
+++ b/WebContent/user/QnA.html
@@ -76,7 +76,7 @@
                             <li>
                              <input type="checkbox" id="checkbox-1" class="checkbox" name="check" onclick="doOpenCheck(this);">
                                 <div>
-                                    <p>답변</p>
+                                    <p>ooo 님을 위한 답변</p>
                                     <p class="p-detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quos, <br> sunt eaque officiis atque quae quod officia illum, ratione esse! Quidem possimus assumenda pariatur deserunt, quisquam id explicabo vero.
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam placeat eum numquam quia quasi labore, magni itaque quae et quo blanditiis iusto illo aspernatur ab! Ut iusto delectus corrupti modi!
                                     d-none Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur et nam laboriosam unde enim beatae excepturi eius mollitia, quod praesentium ipsam. A quos nostrum aperiam dolorum omnis ab repellendus sint?
@@ -102,8 +102,8 @@
                                 <option value="리뷰">리뷰</option>
                                 <option value="기타">기타</option>
                             </select>
-                            <textarea name="" id="" cols="30" rows="10" placeholder="문의할 내용을 적어주세요." required autofocus></textarea>
-                            <input type="submit" value="보내기">
+                            <textarea name="" id="" cols="50" rows="10" placeholder="문의할 내용을 적어주세요." required autofocus></textarea>
+                            <input type="submit" value="보내기" >
                         </form>
                     </section>
                 </section>
