--- a/WebContent/company/reverseOffer/detail.html
+++ b/WebContent/company/reverseOffer/detail.html
@@ -23,8 +23,18 @@
                     <li class="header_search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
                     <li><a href="">제안하기</a></li>
                     <li><a href="">예약내역</a></li>
-                    <li><a href="">더보기</a></li>
-                    <li class="mypage"><a href="">로그인</a>
+                    <li class="sub-page">
+                        <a href="">더보기</a>
+                        <div class="mega-menu">
+                            <ul>
+                                <li><a href="">공지사항</a></li>
+                                <li><a href="">이벤트</a></li>
+                                <li><a href="">1:1 문의</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="sub-page">
+                        <a href="">로그인</a>
                         <div class="mega-menu">
                             <ul>
                                 <li><a href="">내정보</a></li>
@@ -117,7 +127,7 @@
                         <section>
                             <div class="offer-container">
                                 <div class="offer-img-container">
-                                    <a href=""><img src="../../images/company/호텔/서울/강남,역삼,삼성/라마다호텔/슈페리얼더블/슈페리얼더블1.jpg" alt=""></a>
+                                    <a href=""><img src="/images/company/호텔/서울/강남,역삼,삼성/라마다호텔/슈페리얼더블/슈페리얼더블1.jpg" alt=""></a>
                                 </div>
                                 <div class="offer-detail-container">
                                     <div class="offer-room">
@@ -134,6 +144,7 @@
                                     <div class="offer-price">
                                         <div>가격</div>
                                         <div>258,220원</div>
+                                        <div>120,000원</div>
                                     </div>
                                     <div class="highlight-btn-container">
                                         <input type="button" class="highlight-btn" value="예약이 가능한 방입니다">
