--- a/WebContent/admin/promotion/event/detail.html
+++ b/WebContent/admin/promotion/event/detail.html
@@ -21,19 +21,8 @@
             </div>
             <div>
                 <ul class="main-menu">
-                    <li class="header_search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
-                    <li><a href="">제안하기</a></li>
-                    <li><a href="">예약내역</a></li>
-                    <li><a href="">더보기</a></li>
-                    <li class="mypage"><a href="">로그인</a>
-                        <div class="mega-menu">
-                            <ul>
-                                <li><a href="">내정보</a></li>
-                                <li><a href="">제안내역</a></li>
-                                <li><a href="">찜한 숙소</a></li>
-                                <li><a href="">로그아웃</a></li>
-                            </ul>
-                        </div>
+                    <li class="sub-page">
+                        <a href="">로그인</a>
                     </li>
                 </ul>
             </div>
@@ -46,7 +35,7 @@
                 <h1>프로모션 관리</h1>
                     <ul>
                         <li><a href="">골든타임 관리</a></li>
-                        <li><a href="" class="active">이벤트 관리</a></li>
+                        <li class="active"><a href="">이벤트 관리</a></li>
                     </ul>
             </aside>
             <div class="container">
@@ -62,9 +51,9 @@
                     <div class="sub-container">
                         <div class="breadcrumb">
                             <ul class="breadcrumb-list">
-                                <li><i class="fas fa-home"></i>HOME ▶ </li>
-                                <li>프로모션관리 ▶ </li>
-                                <li>이벤트 관리</li>
+                                <li><i class="fas fa-home"></i>&nbsp;&nbsp;HOME&nbsp;&nbsp;&nbsp;<i class="fas fa-angle-right"></i></li>
+                                <li>&nbsp;&nbsp;&nbsp;프로모션 관리&nbsp;&nbsp;&nbsp;<i class="fas fa-angle-right"></i></li>
+                                <li>&nbsp;&nbsp;&nbsp;이벤트 관리&nbsp;&nbsp;&nbsp;</li>
                             </ul>
                         </div>
                         <section class="img-sec">
