--- a/WebContent/admin/promotion/event/reg.html
+++ b/WebContent/admin/promotion/event/reg.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/images/logo.png">
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="/css/layout.css">
     <link rel="stylesheet" href="/css/admin/layout.css">
     <link rel="stylesheet" href="/css/admin/promotion/event/reg.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -21,19 +20,8 @@
             </div>
             <div>
                 <ul class="main-menu">
-                    <li class="header_search"><input type="text"><a href=""><i class="fas fa-search"></i></a></li>
-                    <li><a href="">제안하기</a></li>
-                    <li><a href="">예약내역</a></li>
-                    <li><a href="">더보기</a></li>
-                    <li class="mypage"><a href="">로그인</a>
-                        <div class="mega-menu">
-                            <ul>
-                                <li><a href="">내정보</a></li>
-                                <li><a href="">제안내역</a></li>
-                                <li><a href="">찜한 숙소</a></li>
-                                <li><a href="">로그아웃</a></li>
-                            </ul>
-                        </div>
+                    <li class="sub-page">
+                        <a href="">로그인</a>
                     </li>
                 </ul>
             </div>
@@ -44,10 +32,10 @@
         <section class="body">
             <aside id="aside" class="aside">
                 <h1>프로모션 관리</h1>
-                    <ul>
-                        <li><a href="">골든타임 관리</a></li>
-                        <li><a href="" class="active">이벤트 관리</a></li>
-                    </ul>
+                <ul>
+                    <li><a href="">골든타임 관리</a></li>
+                    <li class="active"><a href="">이벤트 관리</a></li>
+                </ul>
             </aside>
             <div class="container">
                 <nav id="nav" class="nav">
@@ -62,10 +50,10 @@
 	                <div class="sub-container">
 	                    <div class="breadcrumb">
 	                        <ul class="breadcrumb-list">
-	                            <li><i class="fas fa-home"></i>HOME ▶ </li>
-	                            <li>프로모션관리 ▶ </li>
-	                            <li>이벤트 관리</li>
-	                        </ul>
+                                <li><i class="fas fa-home"></i>&nbsp;&nbsp;HOME&nbsp;&nbsp;&nbsp;<i class="fas fa-angle-right"></i></li>
+                                <li>&nbsp;&nbsp;&nbsp;프로모션 관리&nbsp;&nbsp;&nbsp;<i class="fas fa-angle-right"></i></li>
+                                <li>&nbsp;&nbsp;&nbsp;이벤트 관리&nbsp;&nbsp;&nbsp;</li>
+                            </ul>
 	                    </div>
 	                    <h1>이벤트 등록</h1>
 	                    <section class="form-sec">
@@ -81,7 +69,7 @@
 	                                <tr>
 	                                    <th>첨부파일</th>
 	                                    <td class="text-left">
-	                                        <input type="file">
+	                                        <input type="file" class="input-file">
 	                                    </td>
 	                                </tr>
 	                                <tr>
