--- a/WebContent/accommodationLists/accommodationList.html
+++ b/WebContent/accommodationLists/accommodationList.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>호텔리스트</title>
-    <link rel="stylesheet" href="../../css/reset.css">
-    <link rel="stylesheet" href="../../css/jun.css">
+    <link rel="stylesheet" href="/css/reset.css" type="text/css">
+    <link rel="stylesheet" href="/css/layout.css">
     <link rel="stylesheet" href="../css/accommodationList/hotelList.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
@@ -308,7 +308,7 @@
                 <input type="image" id="트윈" alt="" src="../images/침대 아이콘/트윈.png">
             </form>
             <br>
-            
+
             <form>
                 <button type="button">초기화</button>
                 <button type="submit">적용</button>
@@ -334,46 +334,47 @@
                 <ul>
                     <li>
                         <a href = "">
-                            <div class="pic">
-                                <img class="" src="../images/company/호텔/리스트/신라스테이_삼성_메인.jpg">
-                            </div>
-                            <div class="evt-info">
-                                <div class="title">완벽한 힐링의 조화~[조식 2인+24시간 투숙]</div>
-                                <div class="badge">4성급</div> 
-                                <div class= "name">신라스테이 삼성</div>
-                                <div class="score">9.1 추천해요(94)</div>
-                                <div class="location">강남구</div>
-                                <div class="price"> 120,032원</div>
-                            </div>
-                        </a>
-                    </li>
-                    <li>
-                        <a href = "">
-                            <div class="pic">
-                                <img class="" src="../images/company/호텔/리스트/라마다호텔_메인.jpg">
-                            </div>
-                            <div class="evt-info">
-                                <div class="title">당신과의 아름다운 추억 [롯데스카이 전망대]</div>
-                                <div class="badge">특급</div> 
-                                <div class= "name">라마다 서울 호텔</div>
-                                <div class="score">8.0 만족해요(1101)</div>
-                                <div class="location">강남구</div>
-                                <div class="price"> 65,000원</div>
+                            <div class="product">
+                                <div class="pic">
+                                    <img class="" src="../images/company/호텔/리스트/신라스테이_삼성_메인.jpg">
+                                </div>
+                                <div class="evt-info">
+                                    <div class= "name">신라스테이 삼성</div>
+                                    <div class="score">&nbsp;&nbsp;&nbsp;&nbsp;★9.1(94)</div>
+                                    <div class="location">&nbsp;&nbsp;&nbsp;&nbsp;강남구</div>
+                                    <div class="price">120,032원&nbsp;&nbsp;&nbsp;&nbsp;</div>
+
+                                </div>
                             </div>
                         </a>
                     </li>
                     <li>
                         <a href = "">
-                            <div class="pic">
-                                <img class="" src="../images/company/호텔/리스트/글래드라이브_강남_메인.jpg">
+                            <div class="product">
+                                <div class="pic">
+                                    <img class="" src="../images/company/호텔/리스트/라마다호텔_메인.jpg">
+                                </div>
+                                <div class="evt-info">
+                                    <div class= "name">라마다 서울 호텔</div>
+                                    <div class="score">&nbsp;&nbsp;&nbsp;&nbsp;★8.0(1101)</div>
+                                    <div class="location">&nbsp;&nbsp;&nbsp;&nbsp;강남구</div>
+                                    <div class="price">65,000원&nbsp;&nbsp;&nbsp;&nbsp;</div>
+                                </div>
                             </div>
-                            <div class="evt-info">
-                                <div class="title">편안한 수면 경험![컨셉룸+13시 늦은퇴실]</div>
-                                <div class="badge">4성급</div> 
-                                <div class= "name">글래드 라이브 강남</div>
-                                <div class="score">9.3 추천해요(506)</div>
-                                <div class="location">강남구</div>
-                                <div class="price"> 70,000원</div>
+                        </a>
+                    </li>
+                    <li>
+                        <a href = "">
+                            <div class="product">
+                                <div class="pic">
+                                    <img class="" src="../images/company/호텔/리스트/글래드라이브_강남_메인.jpg">
+                                </div>
+                                <div class="evt-info">
+                                    <div class= "name">글래드 라이브 강남</div>
+                                    <div class="score">&nbsp;&nbsp;&nbsp;&nbsp;★9.3(506)</div>
+                                    <div class="location">&nbsp;&nbsp;&nbsp;&nbsp;강남구</div>
+                                    <div class="price">70,000원&nbsp;&nbsp;&nbsp;&nbsp;</div>
+                                </div>
                             </div>
                         </a>
                     </li>
